	- Implemented setMinecartTurnModifier to modify the block length of the minecart turn angle, for example you can set it to 1 and it will take 4 blocks instead of 3 to complete a turn.
	- Released "anim_exporter" tool to export animations from .tr2 files in binary format compatible with TombMP.
	- Implemented loadAnimation which will allow people to load their own exported animations (using anim_exporter) to ANY TR3 level they want.
	- Removed the limit of 50 static objects per level. It will load as many objects as the level file contains.
	- Increased active AI limit from 5 (for lot AI) and 12 (for non-lot AI) to 256 (more than enough).
	- Added new several client and server scripting functions:
		· setCameraPosition.
		· g/setCameraRoom.
		· g/setCameraType.
		· g/setCameraItem.
		· g/setCameraTarget.
		· getItemFromEntity.
		· getItemsTable (client and server).
		· asEntity (client and server).
		· isEntity (client and server).
		· destroyEntity (added in server too).
		· killCreature.
		· getItemGravityStatus.
		· getItemGoalAnim.
		· getItemCurrentAnim.
		· getItemAnimID.
		· getItemAnimFrame.
		· getPlayerHeadRotation.
		· getPlayerTorsoRotation.
		· getPlayerArmFrameNumber.
		· setMinecartTurnModifier.
		· loadAnimation.
		· getAnimFrameBase.
		· setEngineExtendedAnimID.
		· setEngineExtendedVehicleAnimIDs.
		· setAnimNextAnim.
	
- v1.1.6 (xx-11-21):
	- Improved custom animations and fixed a few issues with animation loading.
	- Minecart is now affected properly by global gravity.
	- Highly improved scripting stability by checking for invalid parameters (this avoids a lot of crashes).
	- Fixed issue when loading animations from tr45 resource.
	- FIxed crash when entering the assault course.
	- Added new client and server scripting functions: unloadAnimation, isItemIntelligent, setItemIntelligent, getItemAI, g/setAIEnemy.
	
	
	
	
	
	
	
	
	
	
	
	