@@ -187,7 +187,8 @@
 	- Minecart is now affected properly by global gravity.
 	- Highly improved scripting stability by checking for invalid parameters (this avoids a lot of crashes).
 	- Fixed issue when loading animations from tr45 resource.
-	- FIxed crash when entering the assault course.
+	- Fixed crash when entering the assault course.
+	- Fixed vehicles not being able to be entered if someone dies inside it.
 	- Added new client and server scripting functions: unloadAnimation, isItemIntelligent, setItemIntelligent, getItemAI, g/setAIEnemy.
 	
 	
